--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,16 +9,10 @@ services:
     environment:
       # see https://ghost.org/docs/config/#configuration-options
       database__client: mysql
-      database__connection__host: db
-      database__connection__user: root
-      database__connection__password: example
-      database__connection__database: ghost
+      database__connection__host: ${DATABASE_HOST}
+      database__connection__user: ${DATABASE_USER}
+      database__connection__password: ${DATABASE_PASSWORD}
+      database__connection__database: ${DATABASE_NAME}
       url: http://localhost:8080
     volumes:
       - ./.docker-data/minima:/var/lib/ghost/content
-
-  db:
-    image: mysql:8.0
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: example
