--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,12 @@ services:
       database__client: sqlite3
       database__connection__filename: "content/data/ghost-test.db"
       url: http://localhost:8080
+      mail__transport: "SMTP"
+      mail__options__from: ${MAIL_FROM}
+      mail__options__host: ${MAIL_HOST}
+      mail__options__port: ${MAIL_PORT}
+      mail__options__auth__user: ${MAIL_USER}
+      mail__options__auth__pass: ${MAIL_PASSWORD}
+
     volumes:
-      - ./.docker-data/minima:/var/lib/ghost/content
+      - ./.docker-data/${PROJECT_DIR}:/var/lib/ghost/content
