--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     environment:
       database__client: sqlite3
       database__connection__filename: "content/data/ghost-test.db"
-      url: http://localhost:8080
+      url: ${URL}
       mail__transport: "SMTP"
       mail__options__from: ${MAIL_FROM}
       mail__options__host: ${MAIL_HOST}
