--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,13 @@ services:
     ports:
       - 8080:2368
     environment:
-      database__client: sqlite3
-      database__connection__filename: "content/data/ghost-test.db"
+#       database__client: sqlite3
+#       database__connection__filename: "content/data/ghost-test.db"
+      database__client: mysql
+      database__connection__host: ${DATABASE_HOST}
+      database__connection__user: ${DATABASE_USER}
+      database__connection__password: ${DATABASE_PASSWORD}
+      database__connection__database: ${DATABASE_NAME}
       url: ${URL}
       mail__transport: "SMTP"
       mail__options__from: ${MAIL_FROM}
