--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,4 +18,4 @@ services:
       mail__options__auth__pass: ${MAIL_PASSWORD}
 
     volumes:
-      - ghost-data:/var/lib/ghost/content
+      - demo-ghost:/var/lib/ghost/content
