--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,12 +10,12 @@ services:
       database__client: sqlite3
       database__connection__filename: "content/data/ghost-test.db"
       url: ${URL}
-      mail__transport: "SMTP"
-      mail__options__from: ${MAIL_FROM}
-      mail__options__host: ${MAIL_HOST}
-      mail__options__port: ${MAIL_PORT}
-      mail__options__auth__user: ${MAIL_USER}
-      mail__options__auth__pass: ${MAIL_PASSWORD}
+#       mail__transport: "SMTP"
+#       mail__options__from: ${MAIL_FROM}
+#       mail__options__host: ${MAIL_HOST}
+#       mail__options__port: ${MAIL_PORT}
+#       mail__options__auth__user: ${MAIL_USER}
+#       mail__options__auth__pass: ${MAIL_PASSWORD}
 
     volumes:
       - demo-ghost-volume:/var/lib/ghost/content
